fix: Moving cedar arrow buttons up so they're visible
@21987140

--- a/public/css/wolfnet.cedar.less
+++ b/public/css/wolfnet.cedar.less
@@ -140,7 +140,7 @@
                     .wnt-thumbnail-scroller {
 
                         .wnt-nav-btn {
-                            top: 75%;
+                            top: 50%;
                             width: @control-width;
                             height: @control-height;
                             background-color: @gray-light;
